# backend/controllers/partnerController.js
@@ -1,23 +1,43 @@
 // PartnerController.js
-
+const bcrypt = require('bcryptjs');
 const PartnerModel = require('../models/Partner'); // Assuming you have a User model
+
+
+// Controller function to list all partners
+const listAllPartners = async (req, res) => {
+  try {
+    // Fetch all partners from the database
+    const partners = await PartnerModel.find().select('-password');
+
+    // Send the list of partners in the response
+    res.status(200).json(partners);
+  } catch (error) {
+    // Handle any errors
+    console.error('Error listing partners:', error);
+    res.status(500).json({ error: 'Internal server error' });
+  }
+};
 
 // Controller function for creating a user
 const createPartner = async (req, res) => {
   try {
-    const { name, email, accessControl } = req.body;
+    const { name, email, password, accessControl } = req.body;
+
+    // Hash the password
+    const hashedPassword = await bcrypt.hash(password, 10);
 
     // Create Partner
     const newPartner = await PartnerModel.create({
       name,
       email,
+      password: hashedPassword,
       accessControl,
     });
 
     res.status(201).json({ success: true, data: newPartner });
   } catch (error) {
     console.error(error);
-    res.status(500).json({ success: false, message: 'Server Error' });
+    res.status(500).json({ success: false, message: 'Server Error', error: error });
   }
 };
 
@@ -47,7 +67,10 @@ const updatePartner = async (req, res) => {
   }
 };
 
+
+
 module.exports =  { 
   createPartner,
-  updatePartner
+  updatePartner,
+  listAllPartners
 }
