# backend/routes/partner.js
@@ -4,8 +4,11 @@ const authMiddleware = require('../middleware/authMiddleware');
 const { validateUserCreation, validateUserUpdate } = require('../middleware/validationMiddleware');
 const partnerController = require('../controllers/partnerController');
 
+
+// Route for listing all partners
+router.get('/', authMiddleware.authenticateAdmin, partnerController.listAllPartners);
 // Route for creating a user with access control
-router.post('/', authMiddleware.authenticateAdmin, validateUserCreation, partnerController.createPartner);
+router.post('/create', authMiddleware.authenticateAdmin, validateUserCreation, partnerController.createPartner);
 
 // Route for updating a user with access control
 router.put('/:userId', authMiddleware.authenticateAdmin, validateUserUpdate, partnerController.updatePartner);
