# backend/swagger.json
@@ -8,8 +8,8 @@
   "host": "localhost:5000",
   "basePath": "/",
   "schemes": [
-    "http",
-    "https"
+    "https",
+    "http"
   ],
   "paths": {
     "/api/auth/": {
@@ -171,6 +171,32 @@
       }
     },
     "/api/partner/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/partner/create": {
       "post": {
         "description": "",
         "parameters": [
@@ -189,6 +215,9 @@
                   "example": "any"
                 },
                 "email": {
+                  "example": "any"
+                },
+                "password": {
                   "example": "any"
                 },
                 "accessControl": {
@@ -402,9 +431,22 @@
     "/api/jobs/list": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
